# paperintel

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  graph.py  graph_conversation.py  graph_discovery.py  pyproject.toml  requirements.txt
agents/: agent_run_recorder.py  answer_agent.py  benchmark.py  chunk_and_index.py  citation_critic.py  comparator.py  error_utils.py  evidence_critic.py  extraction.py  human_review.py  ingestion.py  intent_router.py  llm_provider.py  paper_failure_finalize.py  readiness.py  report.py  report_finalize.py  research_strategist.py  retrieval_planner.py  selection_advisor.py  supervisor.py
alembic/: env.py
api/: __init__.py  app_factory.py  chat_handler.py  in_memory_session_store.py  session_store.py
config/: settings.py
docs/: AGENT_CONTRACT.md  API.md  ARCHITECTURE.md  CHUNKING_STRATEGY.md  MCP_SETUP.md  QUICKSTART.md  TROUBLESHOOTING.md
evaluation/: README.md  __init__.py  deterministic_metrics.py  export_workspaces.py  fixtures.py  golden_dataset.py  run_deterministic_eval.py  runner.py  validate_golden_dataset.py
examples/: mcp_prompts.md  rest_smoke.py
golden_dataset/: README.md  seed_5.jsonl
mcp_server/: server.py  tools.py
models/: agent_policies.py  agent_runs.py  api.py  artifacts.py  conversation_state.py  discovery.py  discovery_state.py  errors.py  qa.py  retrieval.py  schemas.py  session.py  state.py
services/: __init__.py  arxiv_search_provider.py  chunking.py  embeddings.py  health.py  paperintel_service.py  qdrant_store.py  repair.py  retrieval_layer.py  search_provider.py  (+3 more)
(+108 files in other folders)
