[build-system]
  requires = ["setuptools>=68"]
  build-backend = "setuptools.backends.legacy:build"

  [project]
  name = "paperintel"
  version = "0.1.0"
  description = "Multi-agent research intelligence workflow for analyzing AI/ML papers."
  requires-python = ">=3.11"
  dependencies = [
      "anthropic==0.95.0",
      "langgraph==1.1.6",
      "langsmith==0.7.32",
      "pydantic==2.13.1",
      "pydantic-settings==2.9.1",
      "fastapi==0.136.0",
      "uvicorn==0.44.0",
      "pymupdf==1.27.2.2",
      "psycopg2-binary==2.9.11",
      "psycopg-binary==3.3.3",
      "langgraph-checkpoint-postgres==3.0.5",
      "python-dotenv==1.2.2",
      "httpx==0.28.1",
      "tenacity==9.1.4",
  ]

  [project.optional-dependencies]
  dev = [
      "pytest==9.0.3",
  ]

  [tool.pytest.ini_options]
  testpaths = ["tests"]
  markers = [
      "live: tests that call real external APIs (deselect with '-m not live')",
  ]